@@ -6,5 +6,5 @@ eggs-directory = eggs
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = z3c.recipe.staticlxml
+eggs = z3c.recipe.staticlxml [tests]
 
