@@ -3,10 +3,13 @@
 ==================
 
 - Made smoke test a bit more fuzzy to ignore output differences when newer
-  zc.recipe.cmmi versions are used.
+  zc.recipe.cmmi versions are used or tests are running on Mac OS X.
 
 - Fixed "relocation R_x86_64_32" error on 64 bit linux by using --with-pic as
   extra option to the libxml/libxslt build.  [reinout]
+
+- Using Python's ``doctest`` module instead of depreacted
+  ``zope.testing.doctest``.
 
 0.7.1 (2009-05-18)
 ==================
